<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AsFoodDelightsActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="247dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bbq"
            />
        <TextView
            android:id="@+id/business_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_name"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:layout_marginTop="100dp"
            android:layout_gravity="center_horizontal"
            />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="250dp"
                android:gravity="left|center"
                android:orientation="vertical"
                android:padding="16dp"
                >

                <TextView
                    android:id="@+id/heading_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option_heading"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />

                <Spinner
                    android:id="@+id/spinner_option"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:entries="@array/options"
                    />

                <TextView
                    android:id="@+id/heading_meat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/meat_heading"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />

                <RadioGroup
                    android:id="@+id/meat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radioButton_BBQ"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chicken" />
                    <RadioButton
                        android:id="@+id/radioButton_Fried"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lamb" />
                    <RadioButton
                        android:id="@+id/radioButton_Baked"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fish" />
                    <RadioButton
                        android:id="@+id/radioButton_veg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/veggie" />
                </RadioGroup>

                <TextView
                    android:id="@+id/heading_boxSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/box_size"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />

                <RadioGroup
                    android:id="@+id/box_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radioButton_small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/small_box" />

                    <RadioButton
                        android:id="@+id/radioButton_medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/medium_box" />

                    <RadioButton
                        android:id="@+id/radioButton_large"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/large_box" />
                </RadioGroup>

                <TextView
                    android:id="@+id/heading_side"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/side_heading"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />

                <CheckBox
                    android:id="@+id/checkBox_fries"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fries_option" />

                <CheckBox
                    android:id="@+id/checkBox_rice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rice_option" />

                <CheckBox
                    android:id="@+id/checkBox_mac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mac_option" />

                <CheckBox
                    android:id="@+id/checkBox_potato"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/potato_option" />

                <CheckBox
                    android:id="@+id/checkBox_salad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/salad_option" />

                <Button
                    android:id="@+id/order_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/orange"
                    android:text="@string/addCart_button"
                    android:textColor="@color/black"
                    android:onClick="onClickCustOrder"/>

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/orange"
                    android:text="@string/compOrder_button"
                    android:textColor="@color/black"/>

            </LinearLayout>
    </FrameLayout>
</ScrollView>